# birdclass-na

./: .gitignore  BENCHMARK.md  LICENSE  README.md  pyproject.toml
data/: __init__.py  _common.py  build_unified_taxonomy.py  download.py  manifest.py
data/sources/: __init__.py  gpiosenka.py  inat21birds.py  nabirds.py  yard.py
docs/: blog_post.md  vast_playbook.md
eval/: __init__.py  baseline_birder.py  baseline_denisjooo.py  final_compare.py  run_benchmarks.py
scripts/: __init__.py  publish.py  remote_bootstrap.sh  sync_to_remote.sh
train/: __init__.py  _common.py  finetune.py  linear_probe.py
