[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "birdclass-na"
version = "0.1.0-dev"
description = "Open-source bird species classifier optimized for North American backyard / camera-trap conditions."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Ryan Houlette" }]
keywords = ["bird", "classifier", "fine-grained", "dinov2", "computer-vision"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Lower bounds chosen for API stability (torch 2.5 = bf16 autocast we
    # rely on; transformers 4.46 = DINOv2 image-classification head wired).
    # No upper bounds — we use vast.ai's freshest PyTorch images in
    # production training; the BirdWatcher integration uses its own
    # pinned-older environment and loads our model via the standard HF
    # AutoModelForImageClassification API which is forward-compatible.
    "torch>=2.5",
    "torchvision>=0.20",
    "transformers>=4.46",
    "huggingface_hub>=0.26",
    "datasets>=3.0",
    "timm>=1.0",
    "Pillow>=10.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "tqdm>=4.66",
    "click>=8.1",                # CLI for data/, train/, eval/ scripts
    "pydantic>=2.7",
    "scikit-learn>=1.5",         # bootstrap CIs, classification metrics
    "matplotlib>=3.9",           # benchmark plots
    # Dataset-specific
    "kaggle>=1.6",               # gpiosenka 525-species download
    "requests>=2.32",            # NABirds + ad-hoc HTTP fetches
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.7",
    "ipython>=8.0",
]
# `pip install birdclass-na[yard]` for users who want to pull labeled
# crops from a local BirdWatcher deployment. Optional because non-yard
# users don't need a SQLAlchemy dependency.
yard = [
    "sqlalchemy>=2.0",
]

[project.urls]
Homepage = "https://github.com/houlette/birdclass-na"
"Bug Tracker" = "https://github.com/houlette/birdclass-na/issues"

[tool.setuptools]
packages = ["data", "train", "eval", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]   # line length handled by formatter, not blocker
